2001-09-27  Darin Adler  <darin@bentspoon.com>

	* components/news/nautilus-news.c: (draw_rss_logo_image):
	Format time using eel_strdup_strftime so we don't have
	a fixed maximum buffer size and marked the time format
	for localization.

2001-09-26  Alex Larsson  <alexl@redhat.com>

	* components/mozilla/nautilus-mozilla-content-view.c:
	Allow the mozilla component to open Chrome windows.
	This is needed for simple dialogs when e.g. submitting
	forms.

2001-09-26  Alex Larsson  <alexl@redhat.com>

	Merged more patches from the Red Hat branch.

	2001-09-20  Alex Larsson  <alexl@redhat.com>
	
	* libnautilus-private/nautilus-desktop-file-loader.c:
	Correct filename in header.
	(nautilus_desktop_file_new): Use g_new0
	(nautilus_desktop_file_load):
	Don't initialize contents. Don't need to check contents
	for NULL.
	(nautilus_desktop_file_foreach_section):
	Coding style fix.

	* libnautilus-private/nautilus-link-desktop-file.c
	(nautilus_link_desktop_file_local_create): Use fputs instead
	of fwrite.
	
	2001-09-19  Alex Larsson  <alexl@redhat.com>
	
	* libnautilus-private/nautilus-link-desktop-file.c
	(nautilus_link_desktop_file_get_link_uri_from_desktop):
	Handle broken .desktop file with type "URL".

	* libnautilus-private/nautilus-icon-factory.c:
	Load the default icon name even when we have a custom icon uri.
	It may be needed if the custom icon was not there.

	2001-09-19  Alex Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory-async.c
	(make_dot_directory_uri): gnome_vfs_uri_new() may fail.
	(link_info_start): Handle make_dot_directory_uri failing.
	
	* libnautilus-private/nautilus-icon-container.c:
	Remove fixed FIXME.
	
	* libnautilus-private/nautilus-link-desktop-file.c
	(slurp_key_string): Pass uris to nautilus_desktop_file_load ().
	(nautilus_link_desktop_file_local_create): Create files
	using FILE * instead of GnomeVFS.
	(nautilus_link_desktop_file_local_set_icon,
	nautilus_link_desktop_file_local_get_link_uri):