@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<theme _name="GNOME" _description="A theme designed to fit well with the classic GNOME environment"> 
+<theme _name="GNOME" _description="A theme designed to fit well with the classic GNOME environment."> 
 
   <directory background_tile_image="patterns/gnome.jpg" 
              selection_box_color_rgba="0x00441140"
