@@ -1,3 +1,11 @@
+2001-09-27  Benedikt Roth  <Benedikt.Roth@gmx.net>
+
+	* components/hardware/nautilus-hardware-view.c:
+	(get_CPU_description):
+	i18n fixes for cpu speed and cache size (fixes #45298)
+	* icons/gnome/gnome.xml:
+	Fix #48322, Theme description for new Gnome theme lacks a dot
+
 2001-09-27  Darin Adler  <darin@bentspoon.com>
 
 	* components/news/nautilus-news.c: (draw_rss_logo_image):
